本体存在时，队伍按钮显示到额外槽